--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -24,6 +24,8 @@ jsonrpsee = { version = "0.14.0", features = ["server"] }
 rand = "0.8.4"
 rust-base58 = "0.0.4"
 chrono = "0.4"
+clap = { version = "3.2.5", features = ["derive"] }
+structopt = "0.3.26"
 libp2p = { version = "0.49", features = [
     "gossipsub",
     "kad",
