--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -124,6 +124,8 @@ cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "
 substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 #robonomics-cli = { path = "../../../cli", optional = true }
 robonomics-pair  = { path = "../pair", optional = true }
+robonomics-protocol  = { path = "../protocol", optional = true }
+
 vergen = { version = "3.1.0", optional = true }
 clap = { version = "3.0", features = ["derive"], optional = true }
 clap_complete = { version = "3.0", optional = true }
